// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/LilButton when activated renders as activated 1`] = `
<button
  class="activated"
/>
`;

exports[`components/LilButton when not activated renders as inactive 1`] = `
<button
  class=""
/>
`;
